Fixed alignment of the forecast

--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -16,7 +16,6 @@ p .Forecast {
 
 .Forecast {
   position: relative;
-  left: 12px;
   bottom: 20px;
 }
 
